@@ -303,6 +303,11 @@ HISTORY
   ++ Bugfixes:
 
   2016-03-22: Simon Goldschmidt
+  * tcp: changed accept handling to be done internally: the application does not
+    have to call tcp_accepted() any more. Instead, when delaying accept (e.g. sockets
+    do), call tcp_backlog_delayed()/tcp_backlog_accepted() (fixes bug #46696)
+
+  2016-03-22: Simon Goldschmidt
   * dns.c: ignore dns response parsing errors, only abort resolving for correct
     responses or error responses from correct server (bug #47459)
 
